feat: implementa pruebas automatizadas para comandos CLI
- Agrega pruebas para NotificationCommand, TradingCommand y StopCommands\n- Implementa casos de prueba válidos e inválidos\n- Agrega configuración de PHPUnit\n- Actualiza documentación del proyecto

--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,13 @@
         "react/promise": "^3.0",
         "react/async": "^4.0",
         "react/http": "^1.9"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
