--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,40 @@
 {
-    "name": "root/trading-bot",
-    "autoload": {
-        "psr-4": {
-            "TradingBot\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Fabricio Juncal"
-        }
-    ],
+    "name": "fabrijuncal/trading-bot",
+    "description": "Bot de trading automatizado para criptomonedas",
+    "type": "project",
+    "version": "1.0.0",
+    "license": "MIT",
     "require": {
-        "ccxt/ccxt": "^4.4",
-        "guzzlehttp/guzzle": "^7.9",
-        "monolog/monolog": "^3.9",
-        "symfony/dotenv": "^7.2",
-        "react/event-loop": "^1.4",
-        "team-reflex/discord-php": "^10.10",
-        "symfony/console": "^7.2",
-        "symfony/polyfill-mbstring": "^1.32",
-        "symfony/string": "^7.2",
-        "symfony/service-contracts": "^3.5",
-        "psr/log": "^3.0",
-        "symfony/event-dispatcher": "^7.2",
-        "symfony/process": "^7.2",
-        "symfony/cache": "^7.2",
-        "react/promise": "^3.0",
-        "react/async": "^4.0",
-        "react/http": "^1.9"
+        "php": "^8.1",
+        "ext-pcntl": "*",
+        "ext-posix": "*",
+        "symfony/console": "^6.0",
+        "symfony/dotenv": "^6.0",
+        "monolog/monolog": "^3.0",
+        "guzzlehttp/guzzle": "^7.0",
+        "ccxt/ccxt": "^4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.5"
+        "phpunit/phpunit": "^10.0",
+        "symfony/var-dumper": "^6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
         }
-    }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "test:coverage": "phpunit --coverage-html coverage"
+    },
+    "config": {
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "minimum-stability": "stable"
 }
