feat: mejoras en el sistema de configuración y notificaciones

--- a/php.ini
+++ b/php.ini
@@ -2,6 +2,6 @@ memory_limit = 1G
 max_execution_time = 300
 upload_max_filesize = 64M
 post_max_size = 64M
-date.timezone = UTC
+date.timezone = America/Argentina/Buenos_Aires
 opcache.enable=1
 opcache.memory_consumption=256
